--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body{
+    background-color: #1e1e1e;
+    color: white;
+}
+#modal_excluir{
+    color: black;
+}
+#botao-ordem{
+    border: none;
+}
 .container{
     margin-top: 50px; 
 }
