--- a/style.css
+++ b/style.css
@@ -1,32 +1,46 @@
-body{
+body {
     background-color: #1e1e1e;
     color: white;
 }
-#modal_excluir{
-    color: black;
-}
-#botao-ordem{
-    border: none;
-}
-.container{
-    margin-top: 50px; 
-}
-h1{
-    margin-bottom: 20px; 
- }
-th{
-    padding: 10px;
-}
-td{
-    padding: 15px;
-}
-td{
+
+#tabela{
     text-align: center;
 }
-iframe{
+
+#modal_excluir, #modal_editar {
+    color: black;
+    text-align: center;
+}
+
+#modal_editar{
+    text-align: center;
+}
+
+#botao-opcoes:hover{
+    transform: scale(1.2);
+}
+
+.container {
+    margin-top: 50px;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+th {
+    padding: 10px;
+}
+
+td {
+    padding: 15px;
+}
+
+td {
+    text-align: center;
+}
+
+iframe {
     width: 100%;
     height: 100%;
-}
-custo{
-    background-color: #FFFFFF;
 }
