--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#tabela{
+#tabela {
     border: solid white 1 px;
     border-radius: 25px !important;
 }
@@ -7,7 +7,8 @@
     border: solid white 1px;
 }
 
-#tabela, td {
+#tabela,
+td {
     text-align: center;
     vertical-align: middle !important;
 }
@@ -26,7 +27,8 @@
     text-align: center;
 }
 
-#botao-opcoes:hover, #botao-opcoes-ordem:hover {
+#botao-opcoes:hover,
+#botao-opcoes-ordem:hover {
     transform: scale(1.2);
 }
 
@@ -45,9 +47,4 @@ th {
 td {
     padding: 15px;
     text-align: center;
-}
-
-iframe {
-    width: 100%;
-    height: 100%;
 }
